@@ -1,6 +1,14 @@
-$Id: apiversions.txt,v 1.6 2015/05/22 10:23:48 nanard Exp $
+$Id: apiversions.txt,v 1.7 2015/07/23 20:40:08 nanard Exp $
 
 Differences in API between miniUPnPc versions
+
+API version 14
+miniupnpc.h
+  add ttl argument to upnpDiscover() upnpDiscoverAll() upnpDiscoverDevice()
+  upnpDiscoverDevices()
+  getDevicesFromMiniSSDPD() :
+    connectToMiniSSDPD() / disconnectFromMiniSSDPD()
+    requestDevicesFromMiniSSDPD() / receiveDevicesFromMiniSSDPD()
 
 API version 13
 miniupnpc.h:
