@@ -1,4 +1,4 @@
-/* $Id: listdevices.c,v 1.4 2015/07/15 12:51:30 nanard Exp $ */
+/* $Id: listdevices.c,v 1.6 2015/07/23 20:40:08 nanard Exp $ */
 /* Project : miniupnp
  * Author : Thomas Bernard
  * Copyright (c) 2013-2015 Thomas Bernard
@@ -7,6 +7,7 @@
 
 #include <stdio.h>
 #include <string.h>
+#include <stdlib.h>
 #ifdef _WIN32
 #include <winsock2.h>
 #endif /* _WIN32 */
@@ -19,6 +20,7 @@ int main(int argc, char * * argv)
 	const char * multicastif = 0;
 	const char * minissdpdpath = 0;
 	int ipv6 = 0;
+	unsigned char ttl = 2;
 	int error = 0;
 	struct UPNPDev * devlist = 0;
 	struct UPNPDev * dev;
@@ -39,10 +41,16 @@ int main(int argc, char * * argv)
 			ipv6 = 1;
 		else if(strcmp(argv[i], "-d") == 0) {
 			if(++i >= argc) {
-				fprintf(stderr, "-d option needs one argument\n");
+				fprintf(stderr, "%s option needs one argument\n", "-d");
 				return 1;
 			}
 			searched_device = argv[i];
+		} else if(strcmp(argv[i], "-t") == 0) {
+			if(++i >= argc) {
+				fprintf(stderr, "%s option needs one argument\n", "-t");
+				return 1;
+			}
+			ttl = (unsigned char)atoi(argv[i]);
 		} else if(strcmp(argv[i], "-l") == 0) {
 			if(++i >= argc) {
 				fprintf(stderr, "-l option needs at least one argument\n");
@@ -63,6 +71,7 @@ int main(int argc, char * * argv)
 			printf("   -m address/ifname : network interface to use for multicast\n");
 			printf("   -d <device string> : search only for this type of device\n");
 			printf("   -l <device1> <device2> ... : search only for theses types of device\n");
+			printf("   -t ttl : set multicast TTL. Default value is 2.\n");
 			printf("   -h : this help\n");
 			return 1;
 		}
@@ -72,18 +81,18 @@ int main(int argc, char * * argv)
 		printf("searching UPnP device type %s\n", searched_device);
 		devlist = upnpDiscoverDevice(searched_device,
 		                             2000, multicastif, minissdpdpath,
-		                             0/*sameport*/, ipv6, &error);
+		                             0/*sameport*/, ipv6, ttl, &error);
 	} else if(searched_devices) {
 		printf("searching UPnP device types :\n");
 		for(i = 0; searched_devices[i]; i++)
 			printf("\t%s\n", searched_devices[i]);
 		devlist = upnpDiscoverDevices(searched_devices,
 		                              2000, multicastif, minissdpdpath,
-		                              0/*sameport*/, ipv6, &error, 1);
+		                              0/*sameport*/, ipv6, ttl, &error, 1);
 	} else {
 		printf("searching all UPnP devices\n");
 		devlist = upnpDiscoverAll(2000, multicastif, minissdpdpath,
-		                             0/*sameport*/, ipv6, &error);
+		                             0/*sameport*/, ipv6, ttl, &error);
 	}
 	if(devlist) {
 		for(dev = devlist, i = 1; dev != NULL; dev = dev->pNext, i++) {
